doc-index-updater/overlays/prod-new/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doc-index-updater
  namespace: doc-index-updater
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: doc-index-updater
          image: mhraproducts4853registry.azurecr.io/products/doc-index-updater
