doc-index-updater/overlays/prod-new/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: doc-index-updater-ingressgateway
  namespace: istio-system
spec:
  servers:
    - port:
        number: 443
        name: https-443-doc-index-updater
        protocol: HTTPS
      hosts:
        - doc-index-updater.api.mhra.gov.uk
      tls:
        mode: SIMPLE
        credentialName: cert-doc-index-updater
