doc-index-updater/overlays/prod-new/ingress.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: doc-index-updater
  namespace: doc-index-updater
spec:
  hosts:
    - doc-index-updater.mhra.gov.uk
    - doc-index-updater.api.mhra.gov.uk
  gateways:
    - istio-system/istio-ingressgateway
    - istio-system/doc-index-updater-ingressgateway
  http:
    - route:
        - destination:
            port:
              number: 80
            host: doc-index-updater
      corsPolicy:
        allowOrigin:
          - pars.mhra.gov.uk
          - mhrapars4853.azureedge.net
        allowMethods:
          - POST
        allowCredentials: false
        allowHeaders:
          - Authorization
        maxAge: "24h"
